# Watson

./: .gitignore  flake.nix  pyproject.toml  tox.ini
scripts/: create-completion-script.sh
watson/: cli.py  watson.py
